# FocusLens

./: .gitignore  README.md  analytics.py  config.py  detection.py  eval_prompt.txt  exp_result.csv  feature_stream.py  main.py  models.py  pyproject.toml  slm_comparison.md  slm_qwen2.5-3b-instruct-q4_k_m_focus_report.txt
calibration/: __init__.py  calibrator.py
features/: __init__.py  detector.py  ear.py  gaze.py  head_pose.py
report/: __init__.py  base.py  local_reporter.py  openai_reporter.py  stub_reporter.py
session/: __init__.py  ear_tracker.py  session_state.py
tests/: conftest.py  test_analytics.py  test_calibration.py  test_detection.py  test_ear_tracker.py  test_pipeline.py  test_session_state.py
ui/: __init__.py  capture.py  overlay.py
